//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table orgs {
  id String [pk]
  icon String
  name String [not null]
  userId String [not null]
  users users_on_orgs [not null]
  roles roles [not null]
  categories categories [not null]
  channels channels [not null]
}

Table categories {
  id String [pk]
  name String [not null]
  orgId String [not null]
  org orgs [not null]
  isPrivate Boolean [not null, default: false]
  channels channels [not null]
}

Table blogs {
  id String [pk]
  image String [not null]
  content String [not null]
  title String [not null]
}

Table roles {
  id String [pk]
  name String [not null]
  color String [not null]
  orgId String [not null]
  org orgs [not null]
  users users_on_roles [not null]
}

Table users {
  id String [pk]
  email String [unique, not null]
  password String [not null]
  salt String [not null]
  orgs users_on_orgs [not null]
  username String [unique]
  fullName String
  isVerified Boolean [not null, default: false]
  roles users_on_roles [not null]
  avatarUrl String
  channels users_on_channels [not null]
  messages messages [not null]
  friends friends [not null]
  friendsOf friends [not null]
}

Table friends {
  id String [pk]
  user users [not null]
  userId String [not null]
  userOfId String [not null]
  userOf users [not null]
  status RelationShipStatus [not null, default: 'PENDING']
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]

  indexes {
    (userId, userOfId) [unique]
  }
}

Table channels {
  id String [pk]
  name String [not null]
  orgId String
  org orgs
  type ChannelType [not null]
  isPrivate Boolean [not null, default: false]
  members users_on_channels [not null]
  messages messages [not null]
  categoryId String
  category categories
}

Table messages {
  id String [pk]
  content String [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  senderId String [not null]
  sender users [not null]
  channelId String [not null]
  channel channels [not null]
}

Table users_on_channels {
  user users [not null]
  userId String [not null]
  channel channels [not null]
  channelId String [not null]

  indexes {
    (userId, channelId) [pk]
  }
}

Table users_on_roles {
  user users [not null]
  userId String [not null]
  role roles [not null]
  roleId String [not null]

  indexes {
    (roleId, userId) [pk]
  }
}

Table users_on_orgs {
  user users [not null]
  userId String [not null]
  org orgs [not null]
  orgId String [not null]

  indexes {
    (orgId, userId) [pk]
  }
}

Enum RelationShipStatus {
  PENDING
  ACCEPTED
  DECLINED
}

Enum ChannelType {
  TEXT
  VOICE
  FORUM
  ANNOUNCEMENT
  STAGE
}

Ref: categories.orgId > orgs.id [delete: Cascade]

Ref: roles.orgId > orgs.id

Ref: friends.userId > users.id

Ref: friends.userOfId > users.id

Ref: channels.orgId > orgs.id [delete: Cascade]

Ref: channels.categoryId > categories.id [delete: Cascade]

Ref: messages.senderId > users.id [delete: Cascade]

Ref: messages.channelId > channels.id [delete: Cascade]

Ref: users_on_channels.userId > users.id

Ref: users_on_channels.channelId > channels.id

Ref: users_on_roles.userId > users.id

Ref: users_on_roles.roleId > roles.id

Ref: users_on_orgs.userId > users.id

Ref: users_on_orgs.orgId > orgs.id